5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1407/executions/1582_994.log
== TEST (2019-03-13 13:05:50) 
-- CODE:
print("")
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:05:55) 
-- CODE:
print(""
-- ERROR:
File "XXXX", line 2
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:06:37) 
-- CODE:
print( Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:31:09) 
-- CODE:
print( Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:41:36) 
-- CODE:
print( Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:39:30) 
-- CODE:
print( Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
